# translangai

./: .gitignore  CHANGELOG.md  DEPLOY.md  DESIGN.md  README.md  package-lock.json  package.json  vitest.config.ts
docs/: SESSION_HANDOVER.md
public/: manifest.webmanifest  sw.js
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
src/app/api/polish/: route.ts
src/app/api/summarize/: route.ts
src/app/api/translate/: route.ts
src/app/api/version/: route.ts
src/components/: AdminPanel.tsx  BackgroundGrid.tsx  ChatComposer.tsx  CompareView.tsx  DevBadge.tsx  DevLinksDrawer.tsx  EdgeSwipeListener.tsx  HistoryPanel.tsx  LanguageBar.tsx  LiveTranslator.tsx  ResultPanel.tsx  SearchInput.tsx  ServiceWorkerRegister.tsx  VoiceControl.tsx
src/lib/: cache.ts  drop.ts  history.ts  i18n.ts  langNames.ts  langPairStats.ts  segmenter.ts  settings.ts  speech.ts  types.ts  ui.ts  usage.ts  useClickAway.ts  version.ts
src/lib/__tests__/: cache.test.ts  providers.test.ts  seed.test.ts  speech.test.ts  summarize.test.ts
src/lib/data/: seed.ts
src/lib/providers/: deepl.ts  index.ts  libre.ts  lingva.ts  llm.ts  local.ts  mymemory.ts  polish.ts  thesaurus.ts  types.ts
