[package]
name = "translangai"
version = "0.7.0"
description = "TransLang AI — omni-translator desktop shell"
authors = ["TransLang AI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "translangai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
